added light theme

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../jquery.knobby.dark.css" >
+    <link rel="stylesheet" href="../jquery.knobby.light.css" >
 
     <style>
         body {
-            background:#444;
+            background:#fff;
         }
         pre {
-            color:#eee;
+            color:#444;
         }
 
     </style>
