--- a/demo/index.html
+++ b/demo/index.html
@@ -16,14 +16,14 @@
     </style>
 </head>
 <body>
-
-        <pre>&lt;input type="number" name="test" turn="10" value="0" min="-10000" max="10000" step="1" /&gt;</pre>
-        <input type="number" name="test" turn="10" value="0" min="-10000" max="10000" step="1" />
-        <pre>&lt;input type="number" name="test" turn=".5"  value="0" min="-5" max="10" step=".25" /&gt;</pre>
-        <input type="number" name="test" turn=".5"  value="5" min="-5" max="10" step=".25" />
-        <pre>&lt;input type="number" name="test" turn="1"  value="0" min="0" max="100" step="10" /&gt;</pre>
-        <input type="number" name="test" turn="1"  value="0" min="0" max="100" step="10" />
-
+        <pre>&lt;input type="number" name="test1" turn="3" value="0" min="0" max="1000" step="25" /&gt;</pre>
+        <input type="number" name="test1" turn="3" value="0" min="0" max="1000" step="25" />
+        <hr>
+        <pre>&lt;input type="number" name="test2" turn=".5"  value="0" min="-5" max="10" step=".25" /&gt;</pre>
+        <input type="number" name="test2" turn=".5"  value="5" min="-5" max="10" step=".25" />
+        <hr>
+        <pre>&lt;input type="number" name="test3" turn="2"  value="0" min="-100" max="100" /&gt;</pre>
+        <input type="number" name="test3" turn="2"  value="0" min="-100" max="100" />
         <script src="jquery.js"></script>
         <script src="../jquery.knobby.js"></script>
         <script>
