--- a/demo/dark.html
+++ b/demo/dark.html
@@ -3,29 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../jquery.knobby.light.css" >
+    <link rel="stylesheet" href="../jquery.knobby.dark.css" >
 
     <style>
         body {
-            background:#fff;
+            background:#333;
             font-family:sans-serif;
             text-align:center;
-
-            color:#444;
+            color:#eee;
         }
 
         a:link {
             color:#26a;
         }
         a:visited {
-            color:#26a;
+            color:#666;
         }
     </style>
 </head>
 <body>
         <h1><a href="https://github.com/grilly86/jquery.knobby.js">jquery.knobby.js</a></h1>
 
-        <h2>light | <a href="dark.html">dark</a></h2>
+        <h2><a href="index.html">light</a> | dark</h2>
 
         <pre>&lt;input type="number" name="test1" turn="3" value="0" min="0" max="1000" step="25" /&gt;</pre>
         <input type="number" name="test1" turn="3" value="0" min="0" max="1000" step="25" />
