improved demo and style

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,9 @@
 
             color:#444;
         }
-
+        pre {
+            white-space: normal;
+        }
         a:link {
             color:#26a;
         }
