--- a/demo/dark.html
+++ b/demo/dark.html
@@ -12,7 +12,9 @@
             text-align:center;
             color:#eee;
         }
-
+        pre{
+            white-space: normal;
+        }
         a:link {
             color:#26a;
         }
