--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="../jquery.knobby.light.css" >
+    <link rel="stylesheet" href="../stylesheet/jquery.knobby.light.css" >
 
     <style>
         body {
